--- a/Style.css
+++ b/Style.css
@@ -18,12 +18,13 @@ body{
 
 /*Stylesheet for min header container, hvor header og nav-bar er placeret*/
 #header-container{
-    margin-top: -1.9%;
+    margin-top: -2.8%;
     margin-left: auto;
     margin-right: auto;
     width: 100%;
     height: 12%;
-    background-color: wheat;
+    background-color: #b52f2f;  
+    border-radius: 5px;
 }
 
 /*Stylesheet for min overskrift header*/
@@ -31,15 +32,7 @@ body{
     margin-left: auto;
     margin-right: auto;
     height: 60%;
-    background-color: #b52f2f;
-}
-
-/*Stylesheet for min nav-bar*/
-#nav-bar{
-    margin-left: auto;
-    margin-right: auto;
-    height: 40%;
-    background-color: #3b3737;
+    font-family: 'IBM Plex Mono', monospace;
 }
 
 /*Stylesheet for min main-container*/
@@ -57,6 +50,14 @@ body{
     text-align: right;
 }
 
+/*Stylesheet for min nav-bar*/
+#nav-bar{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    height: 40%;
+    background-color: #3b3737;
+}
 
 /*Head nav css start*/
 ul {
@@ -65,7 +66,6 @@ ul {
   padding: 0;
   overflow: hidden;
   background-color: #333;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   font-size: 1.0vw;
   font-size: 1.5vh;
   font-family: 'IBM Plex Mono', monospace;
@@ -90,3 +90,55 @@ li a:hover:not(.active) {
 /*Head nav  css slut*/
 
 
+/*Stylesheet til hvis man skal disable noget*/
+.selected {
+    pointer-events:none; 
+    background-color:  #b52f2f;
+}
+
+
+/*Stylesheet for min side hvor man kan registrer sig*/
+#registrer-form{
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+    width: 60%;
+    height: 60%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 5px;
+}
+
+
+/*Stylesheet for min textboxs style for registrer*/
+.textboxs{
+    background-color: #FFFFFF;
+    width: 200px;
+    padding: 5px 3px 3px 3px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border: none;
+    text-align: center;
+    font-size: 1.7vw;
+    font-size: 1.7vh;
+}
+
+
+/*Stylesheet for at center min tabel på registrer siden*/
+#registrer-form-center{
+    margin-left: 4%;
+    margin-right: auto;
+}
+
+/*Styelsheet for cancel knappen*/
+.knap{
+  margin-top: 4%;
+  background-color: #b52f2f;  
+  border: none;
+  color: white;
+  padding: 10px 15px;
+  text-align: center;
+  font-size: 15px;
+  cursor: pointer;
+  font-size: 1.7vw;
+  font-size: 1.7vh;
+  border-radius: 5px;
+}
